fix settings alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -335,6 +335,10 @@ body{
     color: var(--font-color);
 }
 
+#settings h1{
+    margin: 0;
+}
+
 #settings input{
     width: 300px;
     height: 50px;
